--- a/app/templates/admin/persons/persons.html
+++ b/app/templates/admin/persons/persons.html
@@ -38,7 +38,7 @@
                                 {% for person in persons %}
                                     <tr>
                                         <td>
-                                            <a href="#" target="_blank" title="{{ person.name }}">{{ person.name }}</a>
+                                            <a href="{{ url_for('front.persons',slug=person.slug) }}" target="_blank" title="{{ person.name }}">{{ person.name }}</a>
                                         </td>
                                         <td>{{ person.fonction }}</td>
                                             <td><a href="{{url_for('static',filename=person.image)}}" target="_blank"><img width="50px" src="{{url_for('static',filename=person.image)}}" alt="{{ person.title }}"></a></td>
