--- a/app/templates/front/inc/footer.html
+++ b/app/templates/front/inc/footer.html
@@ -2,7 +2,7 @@
     <div class="footer_top_section">
         <div class="container">
             <div class="row">
-                <div class="col-md-5">
+                <div class="col-md-4">
                     <div class="text_widget footer_widget">
                         <div class="footer_widget_title"><h2>Agir avec nous</h2></div>
 
@@ -17,22 +17,11 @@
                     </div><!--text_widget-->
                 </div><!--col-xs-3-->
 
-                <div class="col-md-3">
+                <div class="col-md-4">
                     <div class="footer_widget">
-                        <div class="footer_widget_title"><h2>Lien</h2></div>
-					    <div class="footer_menu_item ">
-						<div class="row">
-							<div class="col-sm-12">
-                                <ul class="nav navbar-nav ">
-                                    <li><a href="https://nondi.org">ACCUEIL</a></li>
-                                    <li><a href="https://nondi.org/agir">AGIR</a></li>
-                                    <li><a href="https://nondi.org/guinee">CHANGEONS</a></li>
-                                    <li><a href="https://nondi.org/actualites">ACTUALITÉS</a></li>
-                                    <li><a href="https://nondi.org/nous-contacter">CONTACT</a></li>
-                                </ul>
-						    </div>
-				      	</div><!--row-->
-			      	</div><!--footer_menu_item-->
+                        <iframe id="myframe" allowtransparency='true' frameborder='0' scrolling='no' src='//www.facebook.com/plugins/likebox.php?
+  href=https://www.facebook.com/nondiguinee/&width=350&height=303&colorscheme=light&show_faces=false&show_border=false&stream=true&header=false'
+                                style='width: 100%'></iframe>
                     </div>
                 </div><!--col-xs-6-->
 
@@ -56,7 +45,7 @@
             <div class="row">
                 <div class="col-md-8">
                     <div class="copyright">
-                        © Copyright <span id="copyright_date"></span> - Tout droit reservé. Par: <a href="https://ndalaba.com" title="Diallo Mamadou N'Dalaba" target="_blank">DMN</a>
+                        © Copyright 2017 - <span id="copyright_date"></span>. Tout droit reservé par: <a href="https://ndalaba.com" title="Diallo Mamadou N'Dalaba" target="_blank">DMN</a>
                     </div>
                 </div><!--col-xs-6-->
                 <div class="col-md-4">
