--- a/app/templates/admin/base.html
+++ b/app/templates/admin/base.html
@@ -40,7 +40,7 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic">
 </head>
 
-<body class="skin-blue fixed sidebar-mini sidebar-mini-expand-feature">
+<body class="skin-blue fixed sidebar-mini sidebar-mini-expand-feature sidebar-collapse">
 
 <div class="wrapper">
     {% include "admin/inc/header.html" %}
