--- a/app/templates/front/articles.html
+++ b/app/templates/front/articles.html
@@ -1,5 +1,11 @@
 {% extends 'front/base.html' %}
-{% block title %} {{ category.title }} | Nondi Guinée{% endblock %}
+{% block title %}
+    {% if category is defined %}
+        {{ category.title }} | Nondi Guinée
+    {% else %}
+        {{ q }} | Nondi Guinée
+    {% endif %}
+{% endblock %}
 {% block content %}
     <section id="feature_category_section" class="feature_category_section category_page section_wrapper">
         <div class="container">
@@ -16,9 +22,9 @@
                                             </div> <!--item_img-->
                                             <div class="item_title_date">
                                                 <div class="news_item_title">
-                                                    <h2><a href="{{ url_for('front.article',category=category.slug,slug=article.slug) }}" title="{{ article.title }}">{{ article.title }}</a></h2>
+                                                    <h2><a href="{{ url_for('front.article',category=article.category.slug,slug=article.slug) }}" title="{{ article.title }}">{{ article.title }}</a></h2>
                                                 </div>
-                                                <div class="item_meta"><a href="{{ url_for('front.article',category=category.slug,slug=article.slug) }}">{{ article.created_at | datetimeformat }},</a> par: <a href="#">{{ article.user.name }}</a></div>
+                                                <div class="item_meta"><a href="{{ url_for('front.article',category=article.category.slug,slug=article.slug) }}">{{ article.created_at | datetimeformat }},</a> par: <a href="#">{{ article.user.name }}</a></div>
                                             </div><!--item_title_date-->
                                         </div> <!--item_wrapper-->
                                         {#<div class="item_content" style="height: 100px">{{ article.get_extrait() | safe }} </div> #}
