--- a/app/templates/front/inc/sidebar.html
+++ b/app/templates/front/inc/sidebar.html
@@ -19,16 +19,19 @@
 </div><!--most_comment-->
 
 <div class="ad">
-    <img class="img-responsive" src="{{ url_for('static',filename='front/images/img-sitebar.jpg') }}" alt="img">
-    <img class="img-responsive" src="{{ url_for('static',filename='front/images/img-sitebar.jpg') }}" alt="img">
-    <img class="img-responsive" src="{{ url_for('static',filename='front/images/img-sitebar.jpg') }}" alt="img">
-    <img class="img-responsive" src="{{ url_for('static',filename='front/images/img-sitebar.jpg') }}" alt="img">
+    <img class="img-responsive" src="{{ url_for('static',filename='front/images/model.jpg') }}" alt="Model guinée" style="width: 125px">
+    <img class="img-responsive" src="{{ url_for('static',filename='front/images/model.jpg') }}" alt="Model guinée" style="width: 125px">
+    <img class="img-responsive" src="{{ url_for('static',filename='front/images/model.jpg') }}" alt="Model guinée" style="width: 125px">
+    <img class="img-responsive" src="{{ url_for('static',filename='front/images/model.jpg') }}" alt="Model guinée" style="width: 125px">
 </div><!--ad-->
 
 <div class="ad">
-    <img class="img-responsive" src="{{ url_for('static',filename='front/images/img-ad.jpg') }}" alt="img">
+    <img class="img-responsive" src="{{ url_for('static',filename='front/images/faim_soif.jpg') }}" alt="img">
 </div>
 
 <div class="ad">
-    <img class="img-responsive" src="{{ url_for('static',filename='front/images/img-ad2.jpg') }}" alt="img">
+    <a href="https://www.guineemouv.org" title="Mouvement populaire pour le changement" target="_blank"><img class="img-responsive" src="https://www.guineemouv.org/images/logo.png" alt="MPLC"></a>
+</div>
+<div class="ad">
+    <a href="http://www.ufdgonline.org/" title="Union des forces démocratiques de Guinée" target="_blank"><img class="img-responsive" src="{{ url_for('static',filename='front/images/ufdg.jpg') }}" alt="UFDG"></a>
 </div>
