--- a/app/templates/front/videos.html
+++ b/app/templates/front/videos.html
@@ -38,7 +38,7 @@
                                             </div> <!--item_img-->
                                             <div class="item_title_date">
                                                 <div class="news_item_title">
-                                                    <h2><a href="{{ url_for('front.videos',slug=video.slug) }}" title="{{ video.title }}">{{ video.title }}</a></h2>
+                                                    <h2><a href="{{ url_for('front.videos',slug=video.slug,page=page) }}" title="{{ video.title }}">{{ video.title }}</a></h2>
                                                 </div>
                                             </div><!--item_title_date-->
                                         </div> <!--item_wrapper-->
