--- a/app/templates/admin/home.html
+++ b/app/templates/admin/home.html
@@ -1,48 +1,131 @@
 {% extends "admin/base.html" %}
 {% block title %} Acceuil {{current_user.name}} {% endblock %}
 {% block content %}
-<div class="content-wrapper">
+    <div class="content-wrapper">
         <!-- Content Header (Page header) -->
         <section class="content-header">
-          <h1>
-            Blank page
-            <small>it all starts here</small>
-          </h1>
-          <ol class="breadcrumb">
-            <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
-            <li><a href="#">Examples</a></li>
-            <li class="active">Blank page</li>
-          </ol>
+            <h1>
+                TABLEAU DE BORD
+                <small>D’un coup d’œil</small>
+            </h1>
+            <ol class="breadcrumb">
+                <li><a href="#"><i class="fa fa-dashboard"></i> ACCEUIL</a></li>
+                <li class="active">Tableau de bord</li>
+            </ol>
         </section>
-    
+
         <!-- Main content -->
         <section class="content">
-    
-          <!-- Default box -->
-          <div class="box">
-            <div class="box-header with-border">
-              <h3 class="box-title">Title</h3>
-    
-              <div class="box-tools pull-right">
-                <button type="button" class="btn btn-box-tool" data-widget="collapse" data-toggle="tooltip"
-                        title="Collapse">
-                  <i class="fa fa-minus"></i></button>
-                <button type="button" class="btn btn-box-tool" data-widget="remove" data-toggle="tooltip" title="Remove">
-                  <i class="fa fa-times"></i></button>
-              </div>
+            <div class="row">
+                <div class="col-lg-3 col-xs-6">
+                    <div class="small-box bg-aqua">
+                        <div class="inner">
+                            <h3>{{ articles_published }}</h3>
+                            <p>Articles publiés</p>
+                        </div>
+                        <div class="icon">
+                            <i class="ion ion-ios-paper"></i>
+                        </div>
+                        <a href="{{ url_for('admin.articles') }}" class="small-box-footer">Details <i class="fa fa-arrow-circle-right"></i></a>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-xs-6">
+                    <div class="small-box bg-green">
+                        <div class="inner">
+                            <h3>{{ videos_published }}</h3>
+                            <p>Vidéos publiéos</p>
+                        </div>
+                        <div class="icon">
+                            <i class="ion ion-ios-videocam"></i>
+                        </div>
+                        <a href="{{ url_for('admin.videos') }}" class="small-box-footer">Details <i class="fa fa-arrow-circle-right"></i></a>
+                    </div>
+                </div>
+                {% if current_user.is_admin %}
+                    <div class="col-lg-3 col-xs-6">
+                        <div class="small-box bg-yellow">
+                            <div class="inner">
+                                <h3>{{ users_activated }}</h3>
+                                <p>Membres actifs</p>
+                            </div>
+                            <div class="icon">
+                                <i class="ion ion-person-add"></i>
+                            </div>
+                            <a href="{{ url_for('admin.users',show_all=1) }}" class="small-box-footer">Details <i class="fa fa-arrow-circle-right"></i></a>
+                        </div>
+                    </div>
+
+                    <div class="col-lg-3 col-xs-6">
+                        <div class="small-box bg-red">
+                            <div class="inner">
+                                <h3>{{ page_activated }}</h3>
+                                <p>Pages publiées</p>
+                            </div>
+                            <div class="icon">
+                                <i class="ion ion-pie-graph"></i>
+                            </div>
+                            <a href="{{ url_for('admin.pages') }}" class="small-box-footer">Details <i class="fa fa-arrow-circle-right"></i></a>
+                        </div>
+                    </div>
+                {% endif %}
+
+                <!-- ./col -->
             </div>
-            <div class="box-body">
-              Start creating your amazing application!
+            <div class="row">
+                <!-- Left col -->
+                {% if current_user.is_admin %}
+                    <section class="col-lg-4 connectedSortable ui-sortable">
+                        <div class="box box-info">
+                            <div class="box-header with-border">
+                                <h3 class="box-title">LISTE MEMBRES</h3>
+                                <div class="box-tools pull-right">
+                                    {% if not show_all %}
+                                        <span class="label label-danger">{{ users | length }} nouveaux Membres</span>
+                                    {% endif %}
+
+                                    <button type="button" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i>
+                                    </button>
+                                    <button type="button" class="btn btn-box-tool" data-widget="remove"><i class="fa fa-times"></i>
+                                    </button>
+                                </div>
+                            </div>
+                            <!-- /.box-header -->
+                            <div class="box-body no-padding" style="">
+                                <ul class="users-list clearfix">
+                                    {% for user in users %}
+                                        <li>
+                                            <img src="{{ url_for('static',filename='upload/users/'+user.photo) }}" alt="{{ user.name }}">
+                                            <a class="users-list-name" href="{{ url_for('admin.edit_user',uid=user.uid) }}">{{ user.name }}</a>
+                                            <span class="users-list-date">{{ user.email }}</span>
+                                        </li>
+                                    {% endfor %}
+                                </ul>
+                                <!-- /.users-list -->
+                            </div>
+                            <div class="box-footer text-center">
+                                <a href="{{ url_for('admin.users',show_all=1) }}" class="uppercase">Afficher tous les membres</a>
+                            </div>
+                        </div>
+                    </section>
+                {% endif %}
+                <section class="col-lg-8 connectedSortable ui-sortable">
+                    <div class="box box-info">
+                        <div class="box-header ui-sortable-handle" style="cursor: move;">
+                            <i class="fa fa-envelope"></i>
+                            <h3 class="box-title">Article rapide</h3>
+                            <!-- tools box -->
+                            <div class="pull-right box-tools">
+                                <button type="button" class="btn btn-info btn-sm" data-widget="remove" data-toggle="tooltip" title="" data-original-title="Remove"><i class="fa fa-times"></i></button>
+                            </div>
+                        </div>
+                        <div class="box-body">
+                            {% include 'admin/articles/edit_form.html' %}
+                        </div>
+                    </div>
+                </section>
+
             </div>
-            <!-- /.box-body -->
-            <div class="box-footer">
-              Footer
-            </div>
-            <!-- /.box-footer-->
-          </div>
-          <!-- /.box -->
-    
         </section>
         <!-- /.content -->
-      </div>
-      {% endblock %}
+    </div>
+{% endblock %}
