--- a/app/templates/admin/inc/header.html
+++ b/app/templates/admin/inc/header.html
@@ -35,7 +35,7 @@
                       <li><!-- start message -->
                         <a href="{{url_for('admin.read',uid=unread_mail.uid)}}">
                           <div class="pull-left">
-                            <img src="{{url_for('static',filename=current_user.photo)}}" class="img-circle" alt="{{current_user.name}}">
+                            <img src="{{url_for('static',filename='upload/users/'+current_user.photo)}}" class="img-circle" alt="{{current_user.name}}">
                           </div>
                           <h4>
                             {{unread_mail.name}}
@@ -51,38 +51,20 @@
                   <li class="footer"><a href="#">Afficher tous les messages</a></li>
                 </ul>
               </li>
-
               <li class="dropdown user user-menu">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">
-                  <img src="{{url_for('static',filename=current_user.photo)}}" class="user-image" alt="User Image">
+                  <img src="{{url_for('static',filename='upload/users/'+current_user.photo)}}" class="user-image" alt="{{ current_user.name }}">
                   <span class="hidden-xs">{{current_user.name}}</span>
                 </a>
                 <ul class="dropdown-menu">
                   <!-- User image -->
                   <li class="user-header">
-                    <img src="{{url_for('static',filename=current_user.photo)}}" class="img-circle" alt="User Image">
-    
+                    <img src="{{url_for('static',filename='upload/users/'+current_user.photo)}}" class="img-circle" alt="{{ current_user.name }}">
                     <p>
                             {{current_user.name}} - {{current_user.job}}
                       <small>Membre depuis {{current_user.created_at | datetimeformat('%b %Y')}}</small>
                     </p>
                   </li>
-                  <!-- Menu Body -->
-                  {# <li class="user-body">
-                    <div class="row">
-                      <div class="col-xs-4 text-center">
-                        <a href="#">Followers</a>
-                      </div>
-                      <div class="col-xs-4 text-center">
-                        <a href="#">Sales</a>
-                      </div>
-                      <div class="col-xs-4 text-center">
-                        <a href="#">Friends</a>
-                      </div>
-                    </div>
-                    <!-- /.row -->
-                  </li>#}
-                  <!-- Menu Footer-->
                   <li class="user-footer">
                     <div class="pull-left">
                       <a href="{{url_for('admin.profil')}}" class="btn btn-default btn-flat">Profils</a>
@@ -93,10 +75,6 @@
                   </li>
                 </ul>
               </li>
-              <!-- Control Sidebar Toggle Button -->
-             {#  <li>
-                <a href="#" data-toggle="control-sidebar"><i class="fa fa-gears"></i></a>
-              </li>#}
             </ul>
           </div>
         </nav>
