--- a/app/templates/admin/users/form.html
+++ b/app/templates/admin/users/form.html
@@ -1,58 +1,111 @@
-<form method="POST" action="{{ url }}" class="form-horizontal" enctype="multipart/form-data">
-     <div class="form-group row">
-        <label class="col-md-3 form-control-label">Activé</label>
-        <label for="activated" class="minimal col-sm-9">
-            {{ form.activated() }}
-            Activé
-        </label>
+{% extends "admin/base.html" %}
+{% block title %} Edition d'un membres {{ current_user.name }} {% endblock %}
+{% block content %}
+
+    <div class="content-wrapper">
+        <!-- Content Header (User header) -->
+        <section class="content-header">
+            <h1>
+                Membres
+                <small>Membres site</small>
+            </h1>
+            <ol class="breadcrumb">
+                <li><a href="{{ url_for('admin.home') }}"><i class="fa fa-dashboard"></i> Accueil</a></li>
+                <li class="active">Membres</li>
+            </ol>
+        </section>
+        {% include "admin/inc/success_error.html" %}
+        <!-- Main content -->
+        <section class="content">
+            <div class="row">
+                <!-- /.col -->
+                <div class="col-md-12">
+                    <div class="box box-info">
+                        <div class="box-header with-border">
+                            <h3 class="box-title">EDITION D'UN MEMBRE</h3>
+                        </div>
+                        <!-- /.box-header -->
+                        <div class="box-body">
+                            <form method="POST" action="{{ url }}" class="form-horizontal" enctype="multipart/form-data">
+                                <div class="form-group row">
+                                    <label class="col-md-3 form-control-label">Activé</label>
+                                    <label for="activated" class="minimal col-sm-9">
+                                        {{ form.activated() }}
+                                        Activé
+                                    </label>
+                                </div>
+                                <div class="form-group row">
+                                    <label class="col-md-3 form-control-label" for="role">Role</label>
+                                    <div class="col-md-9">
+                                        <select name="role" id="role" class="form-control" required>
+                                            <option value=""> -- Role --</option>
+                                            <option value="editeur" {% if user is defined and user.role=='editeur' %}selected{% endif %}>Editeur</option>
+                                            <option value="admin" {% if user is defined and user.role=='admin' %}selected{% endif %}>Administrateur</option>
+                                        </select>
+                                    </div>
+                                </div>
+                                <div class="form-group row">
+                                    <label class="col-md-3 form-control-label">{{ form.name.label }}</label>
+                                    <div class="col-md-9">
+                                        {{ form.name(class='form-control', required='required') }}
+                                    </div>
+                                </div>
+
+                                <div class="form-group row">
+                                    <label class="col-md-3 form-control-label">{{ form.email.label }}</label>
+                                    <div class="col-md-9">
+                                        {{ form.email(class='form-control', required='required',type='email') }}
+                                    </div>
+                                </div>
+                                {% if user is none %}
+                                    <div class="form-group row">
+                                        <label class="col-md-3 form-control-label" for="password">Mot de passe</label>
+                                        <div class="col-md-9">
+                                            <input type="password" name="password" id="password" class="form-control" required/>
+                                        </div>
+                                    </div>
+                                {% endif %}
+                                <div class="form-group row">
+                                    <label class="col-md-3 form-control-label">{{ form.phone.label }}</label>
+                                    <div class="col-md-9">
+                                        {{ form.phone(class='form-control') }}
+                                    </div>
+                                </div>
+                                <div class="form-group row">
+                                    <label class="col-md-3 form-control-label">{{ form.facebook.label }}</label>
+                                    <div class="col-md-9">
+                                        {{ form.facebook(class='form-control') }}
+                                    </div>
+                                </div>
+                                <div class="form-group row">
+                                    <label class="col-md-3 form-control-label">{{ form.location.label }}</label>
+                                    <div class="col-md-9">
+                                        {{ form.location(class='form-control') }}
+                                    </div>
+                                </div>
+                                <div class="form-group row">
+                                    <label class="col-md-3 form-control-label">{{ form.photo.label }}</label>
+                                    <div class="col-md-9">
+                                        {{ form.photo(class='form-control') }}
+                                    </div>
+                                </div>
+                                <div class="modal-footer text-left">
+                                    <button class="btn btn-primary" type="submit"><i class="fa fa-save"></i> Enregistrer</button>
+                                    <a class="btn btn-default" href="{{ url_for('admin.users') }}"><i class="fa fa-times"></i> Annuler</a>
+                                    {% if user is not undefined %}
+                                        <a class="btn btn-danger btn-sm delete" title="Supprimer le membre?" href="{{ url_for('admin.delete_user',uid=user.uid) }}"><i class="fa fa-trash-o"></i></a>
+                                    {% endif %}
+                                </div>
+                            </form>
+                        </div>
+                        <!-- /.box-body -->
+                    </div>
+                    <!-- /.box -->
+                </div>
+                <!-- /.col -->
+            </div>
+            <!-- /.row -->
+        </section>
+        <!-- /.content -->
     </div>
-    <div class="form-group row">
-        <label class="col-md-3 form-control-label">{{ form.name.label }}</label>
-        <div class="col-md-9">
-            {{ form.name(class='form-control', required='required') }}
-        </div>
-    </div>
-    <div class="form-group row">
-        <label class="col-md-3 form-control-label">{{ form.email.label }}</label>
-        <div class="col-md-9">
-            {{ form.email(class='form-control', required='required',type='email') }}
-        </div>
-    </div>
-    <div class="form-group row">
-        <label class="col-md-3 form-control-label" for="password">Mot de passe</label>
-        <div class="col-md-9">
-            <input type="password" name="password" id="password" class="form-control" {% if user is none %}required{% endif %}/>
-        </div>
-    </div>
-    <div class="form-group row">
-        <label class="col-md-3 form-control-label">{{ form.phone.label }}</label>
-        <div class="col-md-9">
-            {{ form.phone(class='form-control') }}
-        </div>
-    </div>
-    <div class="form-group row">
-        <label class="col-md-3 form-control-label">{{ form.facebook.label }}</label>
-        <div class="col-md-9">
-            {{ form.facebook(class='form-control') }}
-        </div>
-    </div>
-    <div class="form-group row">
-        <label class="col-md-3 form-control-label">{{ form.location.label }}</label>
-        <div class="col-md-9">
-            {{ form.location(class='form-control') }}
-        </div>
-    </div>
-    <div class="form-group row">
-        <label class="col-md-3 form-control-label">{{ form.photo.label }}</label>
-        <div class="col-md-9">
-            {{ form.photo(class='form-control') }}
-        </div>
-    </div>
-    <div class="modal-footer text-left">
-        <button class="btn btn-primary" type="submit"><i class="fa fa-save"></i> Enregistrer</button>
-        <a class="btn btn-default" href="{{ url_for('admin.pages') }}"><i class="fa fa-times"></i> Annuler</a>
-        {% if user is not undefined %}
-            <a class="btn btn-danger btn-sm delete" title="Supprimer la user?" href="{{ url_for('admin.delete_user',uid=user.uid) }}"><i class="fa fa-trash-o"></i></a>
-        {% endif %}
-    </div>
-</form>
+{% endblock %}
