--- a/app/templates/admin/users/users.html
+++ b/app/templates/admin/users/users.html
@@ -18,13 +18,15 @@
         <!-- Main content -->
         <section class="content">
             <div class="row">
-                <div class="col-md-5">
-                    <div class="box box-danger">
+                <div class="col-md-12">
+                    <div class="box box-info">
                         <div class="box-header with-border">
                             <h3 class="box-title">LISTE MEMBRES</h3>
-
                             <div class="box-tools pull-right">
-                                <span class="label label-danger">{{ users | length }} Membres</span>
+                                {% if not show_all %}
+                                    <span class="label label-danger">{{ users | length }} nouveaux Membres</span>
+                                {% endif %}
+
                                 <button type="button" class="btn btn-box-tool" data-widget="collapse"><i class="fa fa-minus"></i>
                                 </button>
                                 <button type="button" class="btn btn-box-tool" data-widget="remove"><i class="fa fa-times"></i>
@@ -35,8 +37,8 @@
                         <div class="box-body no-padding" style="">
                             <ul class="users-list clearfix">
                                 {% for user in users %}
-                                    <li>
-                                        <img src="{{ url_for('static',filename=user.photo) }}" alt="{{ user.name }}">
+                                    <li style="width: 10%">
+                                        <img src="{{ url_for('static',filename='upload/users/'+user.photo) }}" alt="{{ user.name }}">
                                         <a class="users-list-name" href="{{ url_for('admin.edit_user',uid=user.uid) }}">{{ user.name }}</a>
                                         <span class="users-list-date">{{ user.email }}</span>
                                     </li>
@@ -44,24 +46,25 @@
                             </ul>
                             <!-- /.users-list -->
                         </div>
+                        {% if not show_all %}
+                            <div class="box-footer text-center">
+                                <a href="{{ url_for('admin.users',show_all=1) }}" class="uppercase">Afficher tous les membres</a>
+                            </div>
+                        {% else %}
+                            <div class="box-footer clearfix">
+                                <ul class="pagination pagination-sm no-margin pull-right">
+                                    {% if prev_url %}
+                                        <li><a href="{{ prev_url }}">«</a></li>
+                                    {% endif %}
+                                    {% if next_url %}
+                                        <li><a href="{{ next_url }}">»</a></li>
+                                    {% endif %}
+                                </ul>
+                            </div>
+                        {% endif %}
+                    </div>
 
-                    </div>
                 </div>
-                <!-- /.col -->
-                <div class="col-md-7">
-                    <div class="box box-info">
-                        <div class="box-header with-border">
-                            <h3 class="box-title">EDITION D'UN MEMBRE</h3>
-                        </div>
-                        <!-- /.box-header -->
-                        <div class="box-body">
-                            {% include 'admin/users/form.html' %}
-                        </div>
-                        <!-- /.box-body -->
-                    </div>
-                    <!-- /.box -->
-                </div>
-                <!-- /.col -->
             </div>
             <!-- /.row -->
         </section>
