--- a/app/templates/front/inc/footer.html
+++ b/app/templates/front/inc/footer.html
@@ -19,9 +19,7 @@
 
                 <div class="col-md-4">
                     <div class="footer_widget">
-                        <iframe id="myframe" allowtransparency='true' frameborder='0' scrolling='no' src='//www.facebook.com/plugins/likebox.php?
-  href=https://www.facebook.com/nondiguinee/&width=350&height=303&colorscheme=light&show_faces=false&show_border=false&stream=true&header=false'
-                                style='width: 100%'></iframe>
+                        <iframe id="myframe" allowtransparency='true' frameborder='0' scrolling='no' src='//www.facebook.com/plugins/likebox.php?href=https://www.facebook.com/nondiguinee/&width=350&height=303&colorscheme=light&show_faces=false&show_border=false&stream=true&header=false' style='width: 100%;height: 190px;'></iframe>
                     </div>
                 </div><!--col-xs-6-->
 
@@ -45,7 +43,7 @@
             <div class="row">
                 <div class="col-md-8">
                     <div class="copyright">
-                        © Copyright 2017 - <span id="copyright_date"></span>. Tout droit reservé par: <a href="https://ndalaba.com" title="Diallo Mamadou N'Dalaba" target="_blank">DMN</a>
+                        © Copyright 2016 - <span id="copyright_date"></span>. Tout droit reservé par: <a href="https://ndalaba.com" title="Diallo Mamadou N'Dalaba" target="_blank">DMN</a>
                     </div>
                 </div><!--col-xs-6-->
                 <div class="col-md-4">
