--- a/app/templates/front/article.html
+++ b/app/templates/front/article.html
@@ -15,19 +15,20 @@
                                     <div class="news_item_title">
                                         <h2><a href="#">{{ article.title }}</a></h2>
                                     </div><!--news_item_title-->
-                                    <div class="item_meta"><a href="#">{{ article.created_at | datetimeformat }}</a> par:<a href="#">{{ article.user.name }}</a></div>
+                                    <div class="item_meta"><a href="#">{{ article.created_at | datetimeformat }}</a> par <a href="#">{{ article.user.name }}</a></div>
 
                                     <div class="single_social_icon">
-                                        <a class="icons-sm fb-ic" href="#"><i class="fa fa-facebook"></i><span>Facebook</span></a>
+                                        <a class="icons-sm fb-ic fb-share" data-url="{{ request.url }}" href="#"><i class="fa fa-facebook"></i><span>Facebook</span></a>
                                         <!--Twitter-->
-                                        <a class="icons-sm tw-ic" href="#"><i class="fa fa-twitter"></i><span>Twitter</span></a>
+                                        <a class="icons-sm tw-ic tw-share" data-url="{{ request.url }}" href="{{ request.url }}"><i class="fa fa-twitter"></i><span>Twitter</span></a>
                                         <!--Google +-->
-                                        <a class="icons-sm gplus-ic" href="#"><i class="fa fa-google-plus"></i><span>Google Plus</span></a>
+                                        <a class="icons-sm gplus-ic gplus-share" data-url="{{ request.url }}" href="{{ request.url }}"><i class="fa fa-google-plus"></i><span>Google Plus</span></a>
                                         <!--Linkedin-->
-                                        <a class="icons-sm li-ic" href="#"><i class="fa fa-linkedin"></i><span>Linkedin</span></a>
-
+                                        <a class="icons-sm li-ic li-share" data-url="{{ request.url }}" href="{{ request.url }}"><i class="fa fa-linkedin"></i><span>Linkedin</span></a>
+                                        {% if current_user and article.is_author(current_user) %}
+                                            <a class="btn btn-default btn-sm" style="float: right;" href="{{ url_for('admin.edit_article',uid=article.uid) }}" title="{{ article.title }}"><i class="fa fa-pencil"></i> Modifier l'article</a>
+                                        {% endif %}
                                     </div> <!--social_icon1-->
-
                                     <div class="item_content">
                                         {{ article.content | safe }}
                                     </div><!--item_content-->
@@ -60,13 +61,9 @@
                                 {% endfor %}
                             </div><!--media_wrapper-->
                         </div><!--single_related_news-->
-
-
                         <div class="ad">
                             <img class="img-responsive" src="{{ url_for('static',filename='front/images/img-single-ad.jpg') }}" alt="Chania">
                         </div>
-
-
                     </div><!--single_content_layout-->
                 </div>
 
@@ -76,4 +73,50 @@
             </div>
         </div>
     </section>
+    <script>
+        var popupCenter = function (url, title, width, height) {
+            var popupWidth = width || 640;
+            var popupHeight = height || 320;
+            var windowLeft = window.screenLeft || window.screenX;
+            var windowTop = window.screenTop || window.screenY;
+            var windowWidth = window.innerWidth || document.documentElement.clientWidth;
+            var windowHeight = window.innerHeight || document.documentElement.clientHeight;
+            var popupLeft = windowLeft + windowWidth / 2 - popupWidth / 2;
+            var popupTop = windowTop + windowHeight / 2 - popupHeight / 2;
+            var popup = window.open(url, title, 'scrollbars=yes, width=' + popupWidth + ', height=' + popupHeight + ', top=' + popupTop + ', left=' + popupLeft);
+            popup.focus();
+            return true;
+        };
+        if (document.querySelector('.tw-share') != null) {
+            document.querySelector('.tw-share').addEventListener('click', function (e) {
+                e.preventDefault();
+                var url = this.getAttribute('data-url');
+                var shareUrl = "https://twitter.com/intent/tweet?text=" + encodeURIComponent(document.title) +
+                    "&via=Nondi" +
+                    "&url=" + encodeURIComponent(url);
+                popupCenter(shareUrl, "Partager sur Twitter");
+            });
+
+            document.querySelector('.fb-share').addEventListener('click', function (e) {
+                e.preventDefault();
+                var url = this.getAttribute('data-url');
+                var shareUrl = "https://www.facebook.com/sharer/sharer.php?u=" + encodeURIComponent(url);
+                popupCenter(shareUrl, "Partager sur facebook");
+            });
+
+            document.querySelector('.gplus-share').addEventListener('click', function (e) {
+                e.preventDefault();
+                var url = this.getAttribute('data-url');
+                var shareUrl = "https://plus.google.com/share?url=" + encodeURIComponent(url);
+                popupCenter(shareUrl, "Partager sur Google+");
+            });
+
+            document.querySelector('.li-share').addEventListener('click', function (e) {
+                e.preventDefault();
+                var url = this.getAttribute('data-url');
+                var shareUrl = "https://www.linkedin.com/shareArticle?url=" + encodeURIComponent(url);
+                popupCenter(shareUrl, "Partager sur Linkedin");
+            });
+        }
+    </script>
 {% endblock %}
