--- a/app/templates/front/inc/header.html
+++ b/app/templates/front/inc/header.html
@@ -10,8 +10,13 @@
                     <div class="top_ber_right">
                         <div class="top-menu">
                             <ul class="nav navbar-nav">
-                                <li><a href="{{ url_for('auth.login') }}">Se connecter</a></li>
-                                <li><a href="{{ url_for('front.register') }}">S'enregistrer</a></li>
+                                {% if current_user %}
+                                    <li><a href="{{ url_for('admin.add_article') }}">Ajouter un article</a></li>
+                                    <li><a href="{{ url_for('admin.home') }}">Administration</a></li>
+                                {% else %}
+                                    <li><a href="{{ url_for('auth.login') }}">Se connecter</a></li>
+                                    <li><a href="{{ url_for('front.register') }}">S'enregistrer</a></li>
+                                {% endif %}
                             </ul>
                         </div><!--top-menu-->
                     </div><!--top_ber_left-->
