--- a/app/templates/front/base.html
+++ b/app/templates/front/base.html
@@ -15,7 +15,7 @@
     <meta property="og:type" content="article"/>
     <meta property="og:url" content="https://nondi.org"/>
     <meta property="og:site_name" content="Nondi Guinée"/>
-    <meta property="article:author" content="N'Dalaba Diallo"/>
+    <meta property="article:author" content="{% block ogauthor %}NONDI{% endblock %}"/>
     <meta property="article:publisher" content="https://www.facebook.com/nondiguinee"/>
 
     {% block stylesheets %}
