--- a/app/templates/front/inc/home_slide.html
+++ b/app/templates/front/inc/home_slide.html
@@ -77,7 +77,7 @@
                                     <div class="item active">
                                         <div class="item_wrapper">
                                             <div class="item_img">
-                                                <img class="img-responsive" src="{{ url_for('static',filename='upload/articles/'+top.image) }}" alt="{{ top.title }}">
+                                                <img class="img-responsive" style="height: 366px; max-width: max-content;" src="{{ url_for('static',filename='upload/articles/'+top.image) }}" alt="{{ top.title }}">
                                             </div> <!--item_img-->
                                             <div class="item_title_date">
                                                 <div class="news_item_title">
