--- a/app/templates/front/base.html
+++ b/app/templates/front/base.html
@@ -45,6 +45,16 @@
         <script type="text/javascript" src="{{ url_for('static',filename='front/js/script.js') }}"></script>
         <script type="text/javascript" src="{{ url_for('static',filename='front/js/offcanvas.min.js') }}"></script>
     {% endblock %}
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-135732491-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-135732491-1');
+</script>
+
 </body>
 
 </html>
