--- a/app/templates/front/base.html
+++ b/app/templates/front/base.html
@@ -54,7 +54,13 @@
 
   gtag('config', 'UA-135732491-1');
 </script>
-
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-6951959484464498",
+    enable_page_level_ads: true
+  });
+</script>
 </body>
 
 </html>
