batch remove message

--- a/app/templates/admin/inc/header.html
+++ b/app/templates/admin/inc/header.html
@@ -48,7 +48,7 @@
                       <!-- end message -->
                     </ul>
                   </li>
-                  <li class="footer"><a href="#">Afficher tous les messages</a></li>
+                  <li class="footer"><a href="{{url_for('admin.messages')}}">Afficher tous les messages</a></li>
                 </ul>
               </li>
               <li class="dropdown user user-menu">
