--- a/app/templates/admin/messages/index.html
+++ b/app/templates/admin/messages/index.html
@@ -19,6 +19,7 @@
       <div class="row">
        {% include "admin/messages/navigation.html" %}
         <!-- /.col -->
+         <form action="{{ url_for('admin.messages') }}" class="form-inline" method="post">
         <div class="col-md-9">
           <div class="box box-primary">
             <div class="box-header with-border">
@@ -39,7 +40,7 @@
                 <button type="button" class="btn btn-default btn-sm checkbox-toggle"><i class="fa fa-square-o"></i>
                 </button>
                 <div class="btn-group">
-                  <button type="button" class="btn btn-default btn-sm"><i class="fa fa-trash-o"></i></button>
+                  <button type="submit" name="action" value="remove" class="btn btn-default btn-sm"><i class="fa fa-trash-o"></i></button>
                   <button type="button" class="btn btn-default btn-sm"><i class="fa fa-reply"></i></button>
                   <button type="button" class="btn btn-default btn-sm"><i class="fa fa-share"></i></button>
                 </div>
@@ -60,7 +61,7 @@
                   <tbody>
                   {% for email in emails %}
                   <tr style="{% if email.read==False %} font-weight:bold {% endif %}">
-                     <td ><input type="checkbox"></td>
+                     <td ><input type="checkbox" value="{{ email.uid }}" name="uid"></td>
                     <td class="mailbox-star"><a href="#"><i class="fa fa-star text-yellow"></i></a></td>
                     <td class="mailbox-name"><a href="{{url_for('admin.read',uid=email.uid)}}">{{email.name}}</a></td>
                     <td class="mailbox-subject">{{email.subject}}
@@ -82,7 +83,7 @@
                 <button type="button" class="btn btn-default btn-sm checkbox-toggle"><i class="fa fa-square-o"></i>
                 </button>
                 <div class="btn-group">
-                  <button type="button" class="btn btn-default btn-sm"><i class="fa fa-trash-o"></i></button>
+                  <button type="submit" name="action" value="remove" class="btn btn-default btn-sm"><i class="fa fa-trash-o"></i></button>
                   <button type="button" class="btn btn-default btn-sm"><i class="fa fa-reply"></i></button>
                   <button type="button" class="btn btn-default btn-sm"><i class="fa fa-share"></i></button>
                 </div>
@@ -102,6 +103,7 @@
           </div>
           <!-- /. box -->
         </div>
+        </form>
         <!-- /.col -->
       </div>
       <!-- /.row -->
