--- a/app/templates/front/inc/header.html
+++ b/app/templates/front/inc/header.html
@@ -9,8 +9,8 @@
                 <div class="col-md-6">
                     <div class="top_ber_right">
                         <div class="top-menu">
-                            <ul class="nav navbar-nav">
-                                {% if current_user %}
+                            <ul class="nav navbar-nav">{{curen}}
+                                {% if current_user.is_authenticated %}
                                     <li><a href="{{ url_for('admin.add_article') }}">Ajouter un article</a></li>
                                     <li><a href="{{ url_for('admin.home') }}">Administration</a></li>
                                 {% else %}
